--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,14 +13,17 @@ license = "MPL-2.0"
 requires-python = ">=3.10"
 dependencies = [
   "deprecation>=2.1.0",
+  "fastapi>=0.115.13",
   "img2pdf>=0.5",
   "packaging>=20",
   "pdfminer.six>=20220319",
-  "pi-heif",                 # Heif image format - maintainers: if this is removed, it will NOT break
+  "pi-heif", # Heif image format - maintainers: if this is removed, it will NOT break
   "pikepdf>=8.10.1,!=9.8.0",
   "Pillow>=10.0.1",
   "pluggy>=1",
+  "python-multipart>=0.0.20",
   "rich>=13",
+  "uvicorn>=0.34.3",
 ]
 authors = [{ name = "James R. Barlow", email = "james@purplerock.ca" }]
 classifiers = [
